# impsy

./: .gitignore  CLAUDE.md  OSC.py  README.md  box-controller-prototype.ipynb  box-controller.ipynb  charlesbox.sh  config.toml  docker-compose.yml  ed-mixture.py  ed_mixture.py  edwardian-mdn.ipynb  empi.sh  empi_controller_old.py  generate_dataset.py  get_models.sh  mixture-rnn-1layers-128units.data-00000-of-00001  mixture-rnn-1layers-128units.index  mixture-rnn-1layers-256units.data-00000-of-00001.REMOVED.git-id  mixture-rnn-1layers-256units.index  mixture-rnn-2layers-128units.data-00000-of-00001  mixture-rnn-2layers-128units.index  mixture-rnn-3layers-128units.data-00000-of-00001.REMOVED.git-id  mixture_rnn.py  musical-mdn.ipynb  musical-mdn.py  musical_mdn.py  musical_mdn_interface_controller.py  predictive_music_model.py  pyproject.toml  requirements.txt  run_rnn_box.py  sketch-mixture.py  sketch_mixture.py  start_imps.py  start_impsy.py  start_lightpad.sh  start_pd.sh  start_xtouch.sh  test-mdn-sketch-mixture.ipynb  (+9 more)
.devcontainer/: devcontainer.json
box_controller/: box_controller.ino
configs/: AiC-alec-u2midipro.toml  AiC-charles-u6midipro.toml  andromeda-ableton.toml  arturia-minilab3-analogV.toml  default.toml  microfreak.toml  op1-volca-fm.toml  pd-workshop-example.toml  roland-p-6.toml  roland-s-1-quneo.toml  roland-s-1-xtouch.toml  roland-s-1.toml  serial-example.toml  user-only-example.toml  xtouch-to-volca-fm.toml  xtouch-to-volca-keys.toml
data/: 2018-01-25T14-04-35-rnnbox.csv
datasets/: training-dataset-4d-12ksmall.npz  training-dataset-4d.npz  training-dataset-9d.npz
docs/: 404.html  CLAUDE.md  Gemfile  README.md  _config.yml  config.md  gallery.md  get-started.md  impsypi-workshop.md  index.md  research.md
empi_mdrnn/: __init__.py  sample_data.py
enclosure/: charlesBox.f3d  charlesBox_middle.f3d  charlesBox_top.f3d
examples/: Dockerfile  Makefile  impsy_inference_speed_experiment.py  microbit_serial_example.py  start_lightpad.sh  tflite_interpreter_tests.py  workshop_example.pd
fader-controller/: control-bank.pd
human-data/: mixture-rnn-1layers-128units.index  mixture-rnn-3layers-128units.index
images/: system-diagram.graffle
imps/: __main__.py  dataset.py  imps.py  interaction.py  tests.py  train.py  utils.py
imps_mdrnn/: __init__.py  sample_data.py
impsy/: __main__.py  compat.py  dataset.py  impsio.py  impsy.py  init.py  interaction.py  interaction_config.py  interaction_old.py  io.py  mdrnn.py  tests.py  tflite_converter.py  train.py  utils.py  web_interface.py
midi_controllers/: LightPadBlock_XYZ_io.lfproject  block-tester.pd  control-bank.pd  eight_toggles.pd  minienv.pd  minienv~.pd  neural-bank.pd  piano_demo.pd  roli-block-listener.pd  testenv.pd  touch_tester.pd  touch_to_drum.pd  touch_to_notes.pd  x-touch-bank.pd  xtouch-mini.pd  xtouch_env.pd
models/: models.md  musicMDRNN-dim2-layers2-units32-mixtures5-scale10.h5  musicMDRNN-dim2-layers2-units32-mixtures5-scale10.keras  musicMDRNN-dim2-layers2-units32-mixtures5-scale10.tflite  musicMDRNN-dim4-layers2-units64-mixtures5-scale10.h5  musicMDRNN-dim4-layers2-units64-mixtures5-scale10.keras  musicMDRNN-dim4-layers2-units64-mixtures5-scale10.tflite  musicMDRNN-dim9-layers2-units64-mixtures5-scale10.h5  musicMDRNN-dim9-layers2-units64-mixtures5-scale10.keras  musicMDRNN-dim9-layers2-units64-mixtures5-scale10.tflite
models-human/: mixture-rnn-1layers-128units.data-00000-of-00001
models-triangle/: mixture-rnn-1layers-128units.data-00000-of-00001  mixture-rnn-3layers-128units.data-00000-of-00001.REMOVED.git-id  mixture-rnn-3layers-128units.index
musical_mdn/: __init__.py  ed_mixture.py  model.py  musical_mdn.py  sample_data.py  sketch_mixture.py  test_model.py
notebooks/: box_controller_prototype.ipynb  context.py  old_musical_mdn.ipynb  test_empi_mdn.ipynb  (+4 more)
(+122 files in other folders)
