[project]
name = "impsy"
version = "0.6.0"
description = "IMPSY is the Interactive Musical Prediction SYstem, a tool for creative interactive intelligent musical instruments using a recurrent mixture density neural network."
authors = [{ name = "Charles Martin", email = "cpm@charlesmartin.au" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "tensorflow>=2.16.2,<2.20",
    "tensorflow-probability==0.24.0",
    "keras-mdn-layer>=0.6.0",
    "tf-keras>=2.16.0,<2.17",
    "h5py>=3.11,<4",
    "python-osc>=1.8.3,<2",
    "pyserial>=3.5,<4",
    "websockets>=12.0,<14",
    "mido>=1.3.2,<2",
    "python-rtmidi>=1.5.8,<2",
    "click>=8.1.7,<9",
    "pandas>=2.2.2,<3",
    "flask>=3.0.3,<4",
    "psutil>=6.0.0,<7",
]

[project.urls]
homepage = "https://github.com/cpmpercussion/impsy"
repository = "https://github.com/cpmpercussion/impsy"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2,<9"
flake8 = ">=7.0.0,<8"
black = ">=24.4.2,<25"
coveralls = ">=4.0.2,<5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
