[project]
name = "impsy"
version = "1.0.0-alpha"
description = "IMPSY is the Interactive Musical Prediction SYstem, a tool for creative interactive intelligent musical instruments using a recurrent mixture density neural network."
authors = [{ name = "Charles Martin", email = "cpm@charlesmartin.au" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "tensorflow>=2.19.1,<2.20",
    "keras-mdn-layer @ git+https://github.com/cpmpercussion/keras-mdn-layer.git@v0.7.0-alpha",
    "h5py>=3.11,<4",
    "python-osc>=1.8.3,<2",
    "pyserial>=3.5,<4",
    "websockets>=12.0,<14",
    "mido>=1.3.2,<2",
    "python-rtmidi>=1.5.8,<2",
    "click>=8.1.7,<9",
    "pandas>=2.2.2,<3",
    "flask>=3.0.3,<4",
    "psutil>=6.0.0,<7",
]

[project.urls]
homepage = "https://github.com/cpmpercussion/impsy"
repository = "https://github.com/cpmpercussion/impsy"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2,<9"
flake8 = ">=7.0.0,<8"
black = ">=24.4.2,<25"
coveralls = ">=4.0.2,<5"
tensorflow-io-gcs-filesystem = [ # this dependency is only needed for Tensorflow < 2.20 and only on Python 3.11.
  {platform = "win32", python=">=3.11,<3.12", version = "0.31.0"},
  {platform = "darwin", python=">=3.11,<3.12", version = ">=0.37.1"},
  {platform = "linux", python=">=3.11,<3.12", version = ">=0.37.1"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
