[project]
name = "impsy"
version = "1.0.0"
description = "IMPSY is the Interactive Musical Prediction SYstem, a tool for creative interactive intelligent musical instruments using a recurrent mixture density neural network."
authors = [{ name = "Charles Martin", email = "cpm@charlesmartin.au" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "tensorflow>=2.20.0,<2.21",
    "ai-edge-litert (>=2.1.0,<3)",
    "keras-mdn-layer @ git+https://github.com/cpmpercussion/keras-mdn-layer.git@v0.7.0-alpha",
    "h5py>=3.11,<4",
    "python-osc>=1.8.3,<2",
    "pyserial>=3.5,<4",
    "websockets>=12.0,<14",
    "mido>=1.3.2,<2",
    "python-rtmidi>=1.5.8,<2",
    "click>=8.1.7,<9",
    "flask>=3.0.3,<4",
    "psutil>=6.0.0,<7",
]

[project.urls]
homepage = "https://github.com/cpmpercussion/impsy"
repository = "https://github.com/cpmpercussion/impsy"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10"
flake8 = ">=7.0.0,<8"
black = ">=26.3.1,<27"
coveralls = ">=4.0.2,<5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
